samples/wig/should_fail/fix_overshoot.wig
fixedStep chrom=chr1 start=0 step=10 span=20
1
2
3
